--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/nova": "^4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "laravel/vapor-core": "^2.30"
+        "laravel/vapor-core": "^2.30",
+        "livewire/livewire": "^3.0@beta"
     },
     "repositories": [
         {
