--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "^2.8",
         "laravel/vapor-core": "^2.30",
         "livewire/livewire": "^2.11",
-        "spatie/laravel-activitylog": "^4.7"
+        "spatie/laravel-activitylog": "^4.7",
+        "spatie/laravel-permission": "^5.10"
     },
     "repositories": [
         {
