--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.8",
         "laravel/vapor-core": "^2.30",
         "livewire/livewire": "^2.11",
+        "plank/laravel-metable": "^5.4",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^5.10"
     },
