--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,23 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "bolechen/nova-activitylog": "^0.4.0",
         "guzzlehttp/guzzle": "^7.2",
+        "inertiajs/inertia-laravel": "^0.6.9",
         "laravel/framework": "^10.9",
         "laravel/jetstream": "^3.2",
         "laravel/nova": "^4.0",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.2",
         "laravel/tinker": "^2.8",
         "laravel/vapor-core": "^2.30",
         "livewire/livewire": "^2.11",
+        "mll-lab/laravel-graphiql": "^3.1",
+        "nuwave/lighthouse": "^6.15",
         "plank/laravel-metable": "^5.4",
         "spatie/laravel-activitylog": "^4.7",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "spatie/nova-tags-field": "^4.0"
     },
     "repositories": [
         {
@@ -32,7 +38,9 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "predis/predis": "^2.2",
+        "spatie/laravel-ignition": "^2.0",
+        "voku/simple_html_dom": "^4.8"
     },
     "autoload": {
         "psr-4": {
