--- a/vapor.yml
+++ b/vapor.yml
@@ -8,4 +8,4 @@ environments:
         build:
             - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
             - 'php artisan event:cache'
-          # - 'npm ci && npm run build && rm -rf node_modules'
+            - 'npm install --package-lock-only && npm ci && npm run build && rm -rf node_modules'
