--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "bolechen/nova-activitylog": "^0.4.0",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "inertiajs/inertia-laravel": "^0.6.9",
         "laravel/framework": "^10.9",
         "laravel/jetstream": "^3.2",
@@ -16,7 +17,10 @@
         "laravel/scout": "^10.2",
         "laravel/tinker": "^2.8",
         "laravel/vapor-core": "^2.30",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^2.11",
+        "madcoda/php-youtube-api": "^1.2",
+        "meilisearch/meilisearch-php": "^1.3",
         "mll-lab/laravel-graphiql": "^3.1",
         "nuwave/lighthouse": "^6.15",
         "plank/laravel-metable": "^5.4",
