--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "advoor/nova-editor-js": "^3.2",
         "bolechen/nova-activitylog": "^0.4.0",
+        "deligoez/laravel-model-hashid": "^2.4",
         "dmitrybubyakin/nova-medialibrary-field": "^4.0",
         "ebess/advanced-nova-media-library": "^4.1",
         "guoxiangke/nova-order-field": "2.1.1",
