--- a/vapor.yml
+++ b/vapor.yml
@@ -5,7 +5,8 @@ environments:
         storage: ly-pms2023
         memory: 1024
         cli-memory: 512
-        runtime: 'php-8.2:al2'
+        # runtime: 'php-8.2:al2'
+        runtime: docker
         build:
             - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
             - 'php artisan event:cache'
