--- a/vapor.yml
+++ b/vapor.yml
@@ -7,6 +7,7 @@ environments:
         cli-memory: 512
         # runtime: 'php-8.2:al2'
         runtime: docker
+        dockerfile: .Dockerfile
         build:
             - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
             - 'php artisan event:cache'
@@ -15,6 +16,7 @@ environments:
         memory: 1024
         cli-memory: 512
         runtime: docker
+        dockerfile: .Dockerfile
         build:
             - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
             - 'php artisan event:cache'
