--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/framework": "^10.9",
         "laravel/jetstream": "^3.2",
         "laravel/nova": "^4.0",
+        "laravel/octane": "^2.3",
         "laravel/sanctum": "^3.2",
         "laravel/scout": "^10.2",
         "laravel/tinker": "^2.8",
