--- a/vapor.yml
+++ b/vapor.yml
@@ -8,7 +8,7 @@ environments:
         cli-memory: 512
         # runtime: 'php-8.2:al2'
         runtime: docker
-        dockerfile: .Dockerfile
+        dockerfile: production.Dockerfile
         build:
             - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
             - 'php artisan event:cache'
