--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,13 @@
         "laravel/framework": "^10.9",
         "laravel/jetstream": "^3.2",
         "laravel/nova": "^4.0",
+        "laravel/octane": "^2.3",
         "laravel/sanctum": "^3.2",
         "laravel/scout": "^10.2",
         "laravel/tinker": "^2.8",
         "laravel/vapor-core": "^2.30",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "league/flysystem-path-prefixing": "^3.0",
         "livewire/livewire": "^3.0",
         "madcoda/php-youtube-api": "^1.2",
         "meilisearch/meilisearch-php": "^1.3",
