--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-medialibrary-pro": "^5.0.0",
         "spatie/laravel-permission": "^5.10",
-        "spatie/nova-tags-field": "^4.0"
+        "spatie/nova-tags-field": "^4.0",
+        "xiangkeguo/pulse": "0.0.1"
     },
     "repositories": [
         {
