--- a/vapor.yml
+++ b/vapor.yml
@@ -12,3 +12,16 @@ environments:
             - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
             - 'php artisan event:cache'
             - 'npm install --package-lock-only && npm ci && npm run build && rm -rf node_modules'
+    staging:
+        memory: 1024
+        cli-memory: 512
+        runtime: docker-arm
+        dockerfile: staging.Dockerfile
+        scheduler: false
+        octane: true
+        octane-database-session-persist: true
+        octane-database-session-ttl: 10
+        build:
+            - 'COMPOSER_MIRROR_PATH_REPOS=1 composer install --no-dev'
+            - 'php artisan event:cache'
+            - 'npm ci && npm run build && rm -rf node_modules'
